<resources>
    <string name="app_name">FreeleticsBodyweightBG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_with_email">Log in with Email</string>
    <string name="facebook_app_id">1267837926665802</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="cancelled">Cancelled</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_one_page_1">GET IN THE SHAPE OF YOUR LIFE</string>
    <string name="error">Error msg</string>
    <string name="success">Successful</string>
    <string name="successfully_posted_post">Successfully posted post</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>

    <string name="motivation">Follow exactly the predefined range of motion in every single repetition to get a star.</string>
    <string name="alternative">Training alternative</string>
    <string name="description">If the movement becomes too hard during your training, you can do the following movement. However, your goal is to always do the movement above and progress towards its full range of motion.</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="age">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string-array name="height">
        <item>147</item>
        <item>150</item>
        <item>152</item>
        <item>155</item>
        <item>157</item>
        <item>160</item>
        <item>162</item>
        <item>165</item>
        <item>167</item>
        <item>170</item>
        <item>172</item>
        <item>175</item>
        <item>177</item>
        <item>180</item>
        <item>182</item>
        <item>185</item>
        <item>187</item>
        <item>190</item>
        <item>192</item>
        <item>195</item>
        <item>197</item>
        <item>200</item>
    </string-array>

    <string-array name="weight">
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
    </string-array>

    <string-array name="workout_repetitions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="exercise_repetitions">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>
</resources>
